<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="240dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/about_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon"/>

        <TextView
            android:id="@+id/about_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:text="@string/app_name"
            android:fontFamily="@font/font_family_second"/>

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:text="version: 0.0.0 beta"
            android:fontFamily="@font/font_family_second"/>

        <TextView
            android:id="@+id/about_jzm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_version"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:text="@string/about_jzm" />

        <TextView
            android:id="@+id/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/category_ripple"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/font_family_second"
            android:text="@string/about_me"
            android:textSize="14sp"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</RelativeLayout>